updated jupyter stuff for ibash

--- a/demo-bash.ipynb
+++ b/demo-bash.ipynb
@@ -82,18 +82,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n"
+      "/tmp\r\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -105,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -114,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "/tmp\r\n"
      ]
     }
    ],
@@ -149,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -158,9 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl\n",
-      "{'killer whale': 'shamu', 'lion': 'Simba', 'bunny:': 'bugs', 'bear': 'Yogi', 'numAnimals': 3, 'whale': 'Moby', 'panda': None}\n",
-      "{'killer whale': 'shamu', 'lion': 'Simba', 'bunny:': 'bugs', 'bear': 'Yogi', 'numAnimals': 3, 'whale': 'Moby', 'panda': None}\n"
+      "Statistics at UC Berkeley: We are a community engaged in research and education in probability and statistics. In addition to developing fundamental theory and methodology, we are actively\r\n",
+      "Second try: Statistics at UC Berkeley: We are a community engaged in research and education in probability and statistics. In addition to developing fundamental theory and methodology, we are actively\r\n"
      ]
     }
    ],
@@ -184,11 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "# the following long comment line is not broken in my test:\n",
     "# asdl lkjsdf jklsdf kladfj jksfd alkfd klasdf klad kla lakjsdf aljdkfad kljafda kaljdf afdlkja lkajdfsa lajdfa adlfjaf jkladf afdl\n",
@@ -211,21 +206,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
+   "display_name": "Bash",
+   "language": "bash",
+   "name": "bash"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "codemirror_mode": "shell",
+   "file_extension": ".sh",
+   "mimetype": "text/x-sh",
+   "name": "bash"
   }
  },
  "nbformat": 4,
