--- a/demo-R.ipynb
+++ b/demo-R.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A demo Jupyter file\n",
+    "An example Jupyter file\n",
     "=========\n",
     "Illustrating the use of R code chunks\n",
     "------------------\n",
