--- a/demo.Rnw
+++ b/demo.Rnw
@@ -21,9 +21,9 @@ opts_chunk$set(fig.width = 5, fig.height = 5)
 
 
 \begin{document} 
-\title{A demo Rtex file\\Illustrating use of R, bash, and Python code chunks}
+\title{An example Rtex file\\Illustrating use of R, bash, and Python code chunks}
 \author{Christopher Paciorek}
-\date{July 2015}
+\date{August 2015}
 
 \maketitle
 
